<resources>
    <string name="app_name">Store Inventory</string>

    <string name="action_save">Save</string>

    <string name="edit_name">product Name</string>

    <string name="edit_price">Price</string>

    <string name="edit_quantity">Quantity</string>

    <string name="edit_supplier_name">Supplier\'s Name</string>

    <string name="edit_supplier_email">Supplier\'s Email</string>

    <string name="edit_supplier_phone">Supplier\'s Phone Number</string>

    <string name="product_info">Product info</string>

    <string name="supplier_info">Supplier info</string>

    <string name="empty_view_title_text">Don\'t keep your store empty for long</string>

    <string name="empty_view_subtitle_text">go on press the add button for a new item</string>

    <string name="action_delete_all_entries">Delete All items</string>

    <string name="editor_activity_title_new_Item">Add an Item</string>

    <string name="editor_activity_title_edit_item">Edit the Item</string>

    <string name="editor_insert_item_failed">Error could\'nt save the item </string>

    <string name="editor_insert_item_successful" >item successfully saved</string>

    <string name="editor_update_item_failed">failed to update the item\'s info</string>

    <string name="editor_update_item_successful"> item successfully updated</string>

    <string name="action_delete">Delete</string>

    <string name="unsaved_changes_dialog_msg">Are you sure unsaved data will be lost</string>

    <string name="discard">Yes, discard the data</string>

    <string name="keep_editing"> No, I\'ll Stay</string>

    <string name="delete_dialog_msg">You really want to delete the item?</string>

    <string name="delete_all_dialog_msg">You really want to delete the all the items?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="editor_delete_item_failed">Error could\'nt delete the item</string>

    <string name="editor_delete_item_successful">Item deleted</string>

    <string name="button_sale">Sale</string>

    <string name="price_text">Price:</string>

    <string name="quantity_text">Quantity:</string>

    <string name="plus_quantity_btn">+</string>

    <string name="minus_quantity_btn">-</string>

    <string name="order_menu">Order by phone</string>

</resources>
