<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical

            "

            <EditText
                android:id="@+id/edit_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:hint="@string/edit_name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/edit_product_price"
                app:layout_constraintStart_toStartOf="@+id/edit_product_price"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="104dp"
                android:text="@string/product_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_supplier_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/edit_supplier_phone"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="@+id/edit_supplier_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_supplier_email" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="180dp"
                android:text="@string/supplier_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edit_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="59dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/edit_price"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView" />

            <EditText
                android:id="@+id/edit_supplier_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="59dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/edit_supplier_email"
                android:inputType="textEmailAddress"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2" />

            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/edit_quantity"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.603"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_product_price" />

            <EditText
                android:id="@+id/edit_supplier_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:hint="@string/edit_supplier_name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/edit_supplier_email"
                app:layout_constraintStart_toStartOf="@+id/edit_supplier_email" />

            <Button
                android:id="@+id/quantity_plus_btn"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:text="@string/plus_quantity_btn"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_product_quantity"
                app:layout_constraintEnd_toStartOf="@+id/edit_product_quantity"
                app:layout_constraintStart_toStartOf="@+id/edit_product_price" />

            <Button
                android:id="@+id/quantity_minus_btn"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/minus_quantity_btn"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_product_quantity"
                app:layout_constraintEnd_toEndOf="@+id/edit_product_price"
                app:layout_constraintStart_toEndOf="@+id/edit_product_quantity" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>